tests/fsharp/conformance/wellformedness/E_Clashing_Values_in_AbstractClass04.bsl

E_Clashing_Values_in_AbstractClass04.fsx(20,18,20,25): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed. Candidates: abstract member D.M : 'T -> int, abstract member D.M : 'U -> string

E_Clashing_Values_in_AbstractClass04.fsx(21,18,21,25): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed. Candidates: abstract member D.M : 'T -> int, abstract member D.M : 'U -> string
